// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News flex sample match snapshot 1`] = `
{
  "params": {
    "altText": "hello flex",
    "contents": {
      "action": undefined,
      "body": {
        "action": undefined,
        "backgroundColor": undefined,
        "borderColor": undefined,
        "borderWidth": undefined,
        "contents": [
          {
            "action": undefined,
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderWidth": undefined,
            "contents": [
              {
                "action": undefined,
                "align": undefined,
                "aspectMode": "cover",
                "aspectRatio": "4:3",
                "backgroundColor": undefined,
                "flex": undefined,
                "gravity": "bottom",
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "sm",
                "type": "image",
                "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/02_1_news_thumbnail_1.png",
              },
              {
                "action": undefined,
                "align": undefined,
                "aspectMode": "cover",
                "aspectRatio": "4:3",
                "backgroundColor": undefined,
                "flex": undefined,
                "gravity": undefined,
                "margin": "md",
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "sm",
                "type": "image",
                "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/02_1_news_thumbnail_2.png",
              },
            ],
            "cornerRadius": undefined,
            "flex": 1,
            "height": undefined,
            "layout": "vertical",
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "paddingAll": undefined,
            "paddingBottom": undefined,
            "paddingEnd": undefined,
            "paddingStart": undefined,
            "paddingTop": undefined,
            "position": undefined,
            "spacing": undefined,
            "type": "box",
            "width": undefined,
          },
          {
            "action": undefined,
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderWidth": undefined,
            "contents": [
              {
                "action": undefined,
                "align": undefined,
                "color": undefined,
                "contents": undefined,
                "decoration": undefined,
                "flex": 1,
                "gravity": "top",
                "margin": undefined,
                "maxLines": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "xs",
                "style": undefined,
                "text": "7 Things to Know for Today",
                "type": "text",
                "weight": undefined,
                "wrap": undefined,
              },
              {
                "color": undefined,
                "margin": undefined,
                "type": "separator",
              },
              {
                "action": undefined,
                "align": undefined,
                "color": undefined,
                "contents": undefined,
                "decoration": undefined,
                "flex": 2,
                "gravity": "top",
                "margin": undefined,
                "maxLines": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "xs",
                "style": undefined,
                "text": "Hay fever goes wild",
                "type": "text",
                "weight": undefined,
                "wrap": undefined,
              },
              {
                "color": undefined,
                "margin": undefined,
                "type": "separator",
              },
              {
                "action": undefined,
                "align": undefined,
                "color": undefined,
                "contents": undefined,
                "decoration": undefined,
                "flex": 2,
                "gravity": "top",
                "margin": undefined,
                "maxLines": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "xs",
                "style": undefined,
                "text": "LINE Pay Begins Barcode Payment Service",
                "type": "text",
                "weight": undefined,
                "wrap": undefined,
              },
              {
                "color": undefined,
                "margin": undefined,
                "type": "separator",
              },
              {
                "action": undefined,
                "align": undefined,
                "color": undefined,
                "contents": undefined,
                "decoration": undefined,
                "flex": 1,
                "gravity": "top",
                "margin": undefined,
                "maxLines": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "xs",
                "style": undefined,
                "text": "LINE Adds LINE Wallet",
                "type": "text",
                "weight": undefined,
                "wrap": undefined,
              },
            ],
            "cornerRadius": undefined,
            "flex": 2,
            "height": undefined,
            "layout": "vertical",
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "paddingAll": undefined,
            "paddingBottom": undefined,
            "paddingEnd": undefined,
            "paddingStart": undefined,
            "paddingTop": undefined,
            "position": undefined,
            "spacing": undefined,
            "type": "box",
            "width": undefined,
          },
        ],
        "cornerRadius": undefined,
        "flex": undefined,
        "height": undefined,
        "layout": "horizontal",
        "margin": undefined,
        "offsetBottom": undefined,
        "offsetEnd": undefined,
        "offsetStart": undefined,
        "offsetTop": undefined,
        "paddingAll": undefined,
        "paddingBottom": undefined,
        "paddingEnd": undefined,
        "paddingStart": undefined,
        "paddingTop": undefined,
        "position": undefined,
        "spacing": "md",
        "type": "box",
        "width": undefined,
      },
      "direction": "ltr",
      "footer": {
        "action": undefined,
        "backgroundColor": undefined,
        "borderColor": undefined,
        "borderWidth": undefined,
        "contents": [
          {
            "action": {
              "label": "More",
              "type": "uri",
              "uri": "http://linecorp.com/",
            },
            "backgroundColor": undefined,
            "color": undefined,
            "flex": undefined,
            "gravity": undefined,
            "height": undefined,
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "position": undefined,
            "style": undefined,
            "type": "button",
          },
        ],
        "cornerRadius": undefined,
        "flex": undefined,
        "height": undefined,
        "layout": "horizontal",
        "margin": undefined,
        "offsetBottom": undefined,
        "offsetEnd": undefined,
        "offsetStart": undefined,
        "offsetTop": undefined,
        "paddingAll": undefined,
        "paddingBottom": undefined,
        "paddingEnd": undefined,
        "paddingStart": undefined,
        "paddingTop": undefined,
        "position": undefined,
        "spacing": undefined,
        "type": "box",
        "width": undefined,
      },
      "header": {
        "action": undefined,
        "backgroundColor": undefined,
        "borderColor": undefined,
        "borderWidth": undefined,
        "contents": [
          {
            "action": undefined,
            "align": undefined,
            "color": "#aaaaaa",
            "contents": undefined,
            "decoration": undefined,
            "flex": undefined,
            "gravity": undefined,
            "margin": undefined,
            "maxLines": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "position": undefined,
            "size": "sm",
            "style": undefined,
            "text": "NEWS DIGEST",
            "type": "text",
            "weight": "bold",
            "wrap": undefined,
          },
        ],
        "cornerRadius": undefined,
        "flex": undefined,
        "height": undefined,
        "layout": "horizontal",
        "margin": undefined,
        "offsetBottom": undefined,
        "offsetEnd": undefined,
        "offsetStart": undefined,
        "offsetTop": undefined,
        "paddingAll": undefined,
        "paddingBottom": undefined,
        "paddingEnd": undefined,
        "paddingStart": undefined,
        "paddingTop": undefined,
        "position": undefined,
        "spacing": undefined,
        "type": "box",
        "width": undefined,
      },
      "hero": {
        "action": {
          "label": undefined,
          "type": "uri",
          "uri": "http://linecorp.com/",
        },
        "align": undefined,
        "aspectMode": "cover",
        "aspectRatio": "20:13",
        "backgroundColor": undefined,
        "flex": undefined,
        "gravity": undefined,
        "margin": undefined,
        "offsetBottom": undefined,
        "offsetEnd": undefined,
        "offsetStart": undefined,
        "offsetTop": undefined,
        "position": undefined,
        "size": "xl",
        "type": "image",
        "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/01_4_news.png",
      },
      "styles": undefined,
      "type": "bubble",
    },
    "type": "flex",
  },
  "type": "message",
}
`;

exports[`Restaurant flex sample match snapshot 1`] = `
{
  "params": {
    "altText": "hello restaurant flex",
    "contents": {
      "action": undefined,
      "body": {
        "action": undefined,
        "backgroundColor": undefined,
        "borderColor": undefined,
        "borderWidth": undefined,
        "contents": [
          {
            "action": undefined,
            "align": undefined,
            "color": undefined,
            "contents": undefined,
            "decoration": undefined,
            "flex": undefined,
            "gravity": undefined,
            "margin": undefined,
            "maxLines": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "position": undefined,
            "size": "xl",
            "style": undefined,
            "text": "Brown Cafe",
            "type": "text",
            "weight": "bold",
            "wrap": undefined,
          },
          {
            "action": undefined,
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderWidth": undefined,
            "contents": [
              {
                "aspectRatio": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "sm",
                "type": "icon",
                "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/review_gold_star_28.png",
              },
              {
                "aspectRatio": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "sm",
                "type": "icon",
                "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/review_gold_star_28.png",
              },
              {
                "aspectRatio": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "sm",
                "type": "icon",
                "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/review_gold_star_28.png",
              },
              {
                "aspectRatio": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "sm",
                "type": "icon",
                "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/review_gold_star_28.png",
              },
              {
                "aspectRatio": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "sm",
                "type": "icon",
                "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/review_gray_star_28.png",
              },
              {
                "action": undefined,
                "align": undefined,
                "color": "#999999",
                "contents": undefined,
                "decoration": undefined,
                "flex": 0,
                "gravity": undefined,
                "margin": "md",
                "maxLines": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "sm",
                "style": undefined,
                "text": "4.0",
                "type": "text",
                "weight": undefined,
                "wrap": undefined,
              },
              {
                "flex": undefined,
                "type": "filler",
              },
            ],
            "cornerRadius": undefined,
            "flex": undefined,
            "height": undefined,
            "layout": "baseline",
            "margin": "md",
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "paddingAll": undefined,
            "paddingBottom": undefined,
            "paddingEnd": undefined,
            "paddingStart": undefined,
            "paddingTop": undefined,
            "position": undefined,
            "spacing": undefined,
            "type": "box",
            "width": undefined,
          },
          {
            "action": undefined,
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderWidth": undefined,
            "contents": [
              {
                "action": undefined,
                "backgroundColor": undefined,
                "borderColor": undefined,
                "borderWidth": undefined,
                "contents": [
                  {
                    "action": undefined,
                    "align": undefined,
                    "color": "#aaaaaa",
                    "contents": undefined,
                    "decoration": undefined,
                    "flex": 1,
                    "gravity": undefined,
                    "margin": undefined,
                    "maxLines": undefined,
                    "offsetBottom": undefined,
                    "offsetEnd": undefined,
                    "offsetStart": undefined,
                    "offsetTop": undefined,
                    "position": undefined,
                    "size": "sm",
                    "style": undefined,
                    "text": "Place",
                    "type": "text",
                    "weight": undefined,
                    "wrap": undefined,
                  },
                  {
                    "action": undefined,
                    "align": undefined,
                    "color": "#666666",
                    "contents": undefined,
                    "decoration": undefined,
                    "flex": 5,
                    "gravity": undefined,
                    "margin": undefined,
                    "maxLines": undefined,
                    "offsetBottom": undefined,
                    "offsetEnd": undefined,
                    "offsetStart": undefined,
                    "offsetTop": undefined,
                    "position": undefined,
                    "size": "sm",
                    "style": undefined,
                    "text": "Miraina Tower, 4-1-6 Shinjuku, Tokyo",
                    "type": "text",
                    "weight": undefined,
                    "wrap": true,
                  },
                ],
                "cornerRadius": undefined,
                "flex": undefined,
                "height": undefined,
                "layout": "baseline",
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "paddingAll": undefined,
                "paddingBottom": undefined,
                "paddingEnd": undefined,
                "paddingStart": undefined,
                "paddingTop": undefined,
                "position": undefined,
                "spacing": "sm",
                "type": "box",
                "width": undefined,
              },
              {
                "action": undefined,
                "backgroundColor": undefined,
                "borderColor": undefined,
                "borderWidth": undefined,
                "contents": [
                  {
                    "action": undefined,
                    "align": undefined,
                    "color": "#aaaaaa",
                    "contents": undefined,
                    "decoration": undefined,
                    "flex": 1,
                    "gravity": undefined,
                    "margin": undefined,
                    "maxLines": undefined,
                    "offsetBottom": undefined,
                    "offsetEnd": undefined,
                    "offsetStart": undefined,
                    "offsetTop": undefined,
                    "position": undefined,
                    "size": "sm",
                    "style": undefined,
                    "text": "Time",
                    "type": "text",
                    "weight": undefined,
                    "wrap": undefined,
                  },
                  {
                    "action": undefined,
                    "align": undefined,
                    "color": "#666666",
                    "contents": undefined,
                    "decoration": undefined,
                    "flex": 5,
                    "gravity": undefined,
                    "margin": undefined,
                    "maxLines": undefined,
                    "offsetBottom": undefined,
                    "offsetEnd": undefined,
                    "offsetStart": undefined,
                    "offsetTop": undefined,
                    "position": undefined,
                    "size": "sm",
                    "style": undefined,
                    "text": "10:00 - 23:00",
                    "type": "text",
                    "weight": undefined,
                    "wrap": true,
                  },
                ],
                "cornerRadius": undefined,
                "flex": undefined,
                "height": undefined,
                "layout": "baseline",
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "paddingAll": undefined,
                "paddingBottom": undefined,
                "paddingEnd": undefined,
                "paddingStart": undefined,
                "paddingTop": undefined,
                "position": undefined,
                "spacing": "sm",
                "type": "box",
                "width": undefined,
              },
            ],
            "cornerRadius": undefined,
            "flex": undefined,
            "height": undefined,
            "layout": "vertical",
            "margin": "lg",
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "paddingAll": undefined,
            "paddingBottom": undefined,
            "paddingEnd": undefined,
            "paddingStart": undefined,
            "paddingTop": undefined,
            "position": undefined,
            "spacing": "sm",
            "type": "box",
            "width": undefined,
          },
        ],
        "cornerRadius": undefined,
        "flex": undefined,
        "height": undefined,
        "layout": "vertical",
        "margin": undefined,
        "offsetBottom": undefined,
        "offsetEnd": undefined,
        "offsetStart": undefined,
        "offsetTop": undefined,
        "paddingAll": undefined,
        "paddingBottom": undefined,
        "paddingEnd": undefined,
        "paddingStart": undefined,
        "paddingTop": undefined,
        "position": undefined,
        "spacing": undefined,
        "type": "box",
        "width": undefined,
      },
      "direction": "ltr",
      "footer": {
        "action": undefined,
        "backgroundColor": undefined,
        "borderColor": undefined,
        "borderWidth": undefined,
        "contents": [
          {
            "action": {
              "label": "CALL",
              "type": "uri",
              "uri": "https://linecorp.com",
            },
            "backgroundColor": undefined,
            "color": undefined,
            "flex": undefined,
            "gravity": undefined,
            "height": "sm",
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "position": undefined,
            "style": "link",
            "type": "button",
          },
          {
            "action": {
              "label": "WEBSITE",
              "type": "uri",
              "uri": "https://linecorp.com",
            },
            "backgroundColor": undefined,
            "color": undefined,
            "flex": undefined,
            "gravity": undefined,
            "height": "sm",
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "position": undefined,
            "style": "link",
            "type": "button",
          },
          {
            "size": undefined,
            "type": "spacer",
          },
        ],
        "cornerRadius": undefined,
        "flex": 0,
        "height": undefined,
        "layout": "vertical",
        "margin": undefined,
        "offsetBottom": undefined,
        "offsetEnd": undefined,
        "offsetStart": undefined,
        "offsetTop": undefined,
        "paddingAll": undefined,
        "paddingBottom": undefined,
        "paddingEnd": undefined,
        "paddingStart": undefined,
        "paddingTop": undefined,
        "position": undefined,
        "spacing": "sm",
        "type": "box",
        "width": undefined,
      },
      "hero": {
        "action": {
          "label": undefined,
          "type": "uri",
          "uri": "http://linecorp.com/",
        },
        "align": undefined,
        "aspectMode": "cover",
        "aspectRatio": "20:13",
        "backgroundColor": undefined,
        "flex": undefined,
        "gravity": undefined,
        "margin": undefined,
        "offsetBottom": undefined,
        "offsetEnd": undefined,
        "offsetStart": undefined,
        "offsetTop": undefined,
        "position": undefined,
        "size": "md",
        "type": "image",
        "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/01_1_cafe.png",
      },
      "styles": undefined,
      "type": "bubble",
    },
    "type": "flex",
  },
  "type": "message",
}
`;

exports[`Shopping flex sample match snapshot 1`] = `
{
  "params": {
    "altText": "hello shopping flex",
    "contents": {
      "contents": [
        {
          "action": undefined,
          "body": {
            "action": undefined,
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderWidth": undefined,
            "contents": [
              {
                "action": undefined,
                "align": undefined,
                "color": undefined,
                "contents": undefined,
                "decoration": undefined,
                "flex": undefined,
                "gravity": undefined,
                "margin": undefined,
                "maxLines": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "xl",
                "style": undefined,
                "text": "Arm Chair, White",
                "type": "text",
                "weight": "bold",
                "wrap": true,
              },
              {
                "action": undefined,
                "backgroundColor": undefined,
                "borderColor": undefined,
                "borderWidth": undefined,
                "contents": [
                  {
                    "action": undefined,
                    "align": undefined,
                    "color": undefined,
                    "contents": undefined,
                    "decoration": undefined,
                    "flex": 0,
                    "gravity": undefined,
                    "margin": undefined,
                    "maxLines": undefined,
                    "offsetBottom": undefined,
                    "offsetEnd": undefined,
                    "offsetStart": undefined,
                    "offsetTop": undefined,
                    "position": undefined,
                    "size": "xl",
                    "style": undefined,
                    "text": "$49",
                    "type": "text",
                    "weight": "bold",
                    "wrap": true,
                  },
                  {
                    "action": undefined,
                    "align": undefined,
                    "color": undefined,
                    "contents": undefined,
                    "decoration": undefined,
                    "flex": 0,
                    "gravity": undefined,
                    "margin": undefined,
                    "maxLines": undefined,
                    "offsetBottom": undefined,
                    "offsetEnd": undefined,
                    "offsetStart": undefined,
                    "offsetTop": undefined,
                    "position": undefined,
                    "size": "sm",
                    "style": undefined,
                    "text": ".99",
                    "type": "text",
                    "weight": "bold",
                    "wrap": true,
                  },
                ],
                "cornerRadius": undefined,
                "flex": undefined,
                "height": undefined,
                "layout": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "paddingAll": undefined,
                "paddingBottom": undefined,
                "paddingEnd": undefined,
                "paddingStart": undefined,
                "paddingTop": undefined,
                "position": undefined,
                "spacing": undefined,
                "type": "box",
                "width": undefined,
              },
            ],
            "cornerRadius": undefined,
            "flex": undefined,
            "height": undefined,
            "layout": "vertical",
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "paddingAll": undefined,
            "paddingBottom": undefined,
            "paddingEnd": undefined,
            "paddingStart": undefined,
            "paddingTop": undefined,
            "position": undefined,
            "spacing": "sm",
            "type": "box",
            "width": undefined,
          },
          "direction": "ltr",
          "footer": {
            "action": undefined,
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderWidth": undefined,
            "contents": [
              {
                "action": {
                  "label": "Add to Cart",
                  "type": "uri",
                  "uri": "https://linecorp.com",
                },
                "backgroundColor": undefined,
                "color": undefined,
                "flex": undefined,
                "gravity": undefined,
                "height": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "style": "primary",
                "type": "button",
              },
              {
                "action": {
                  "label": "Add to wishlist",
                  "type": "uri",
                  "uri": "https://linecorp.com",
                },
                "backgroundColor": undefined,
                "color": undefined,
                "flex": undefined,
                "gravity": undefined,
                "height": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "style": undefined,
                "type": "button",
              },
            ],
            "cornerRadius": undefined,
            "flex": undefined,
            "height": undefined,
            "layout": "vertical",
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "paddingAll": undefined,
            "paddingBottom": undefined,
            "paddingEnd": undefined,
            "paddingStart": undefined,
            "paddingTop": undefined,
            "position": undefined,
            "spacing": "sm",
            "type": "box",
            "width": undefined,
          },
          "hero": {
            "action": undefined,
            "align": undefined,
            "aspectMode": "cover",
            "aspectRatio": "20:13",
            "backgroundColor": undefined,
            "flex": undefined,
            "gravity": undefined,
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "position": undefined,
            "size": "xs",
            "type": "image",
            "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/01_5_carousel.png",
          },
          "styles": undefined,
          "type": "bubble",
        },
        {
          "action": undefined,
          "body": {
            "action": undefined,
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderWidth": undefined,
            "contents": [
              {
                "action": undefined,
                "align": undefined,
                "color": undefined,
                "contents": undefined,
                "decoration": undefined,
                "flex": undefined,
                "gravity": undefined,
                "margin": undefined,
                "maxLines": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "xl",
                "style": undefined,
                "text": "Metal Desk Lamp",
                "type": "text",
                "weight": "bold",
                "wrap": true,
              },
              {
                "action": undefined,
                "backgroundColor": undefined,
                "borderColor": undefined,
                "borderWidth": undefined,
                "contents": [
                  {
                    "action": undefined,
                    "align": undefined,
                    "color": undefined,
                    "contents": undefined,
                    "decoration": undefined,
                    "flex": 0,
                    "gravity": undefined,
                    "margin": undefined,
                    "maxLines": undefined,
                    "offsetBottom": undefined,
                    "offsetEnd": undefined,
                    "offsetStart": undefined,
                    "offsetTop": undefined,
                    "position": undefined,
                    "size": "xl",
                    "style": undefined,
                    "text": "$11",
                    "type": "text",
                    "weight": "bold",
                    "wrap": true,
                  },
                  {
                    "action": undefined,
                    "align": undefined,
                    "color": undefined,
                    "contents": undefined,
                    "decoration": undefined,
                    "flex": 0,
                    "gravity": undefined,
                    "margin": undefined,
                    "maxLines": undefined,
                    "offsetBottom": undefined,
                    "offsetEnd": undefined,
                    "offsetStart": undefined,
                    "offsetTop": undefined,
                    "position": undefined,
                    "size": "sm",
                    "style": undefined,
                    "text": ".99",
                    "type": "text",
                    "weight": "bold",
                    "wrap": true,
                  },
                ],
                "cornerRadius": undefined,
                "flex": undefined,
                "height": undefined,
                "layout": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "paddingAll": undefined,
                "paddingBottom": undefined,
                "paddingEnd": undefined,
                "paddingStart": undefined,
                "paddingTop": undefined,
                "position": undefined,
                "spacing": undefined,
                "type": "box",
                "width": undefined,
              },
              {
                "action": undefined,
                "align": undefined,
                "color": "#ff5551",
                "contents": undefined,
                "decoration": undefined,
                "flex": 0,
                "gravity": undefined,
                "margin": "md",
                "maxLines": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "size": "xxs",
                "style": undefined,
                "text": "Temporarily out of stock",
                "type": "text",
                "weight": undefined,
                "wrap": true,
              },
            ],
            "cornerRadius": undefined,
            "flex": undefined,
            "height": undefined,
            "layout": "vertical",
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "paddingAll": undefined,
            "paddingBottom": undefined,
            "paddingEnd": undefined,
            "paddingStart": undefined,
            "paddingTop": undefined,
            "position": undefined,
            "spacing": "sm",
            "type": "box",
            "width": undefined,
          },
          "direction": "ltr",
          "footer": {
            "action": undefined,
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderWidth": undefined,
            "contents": [
              {
                "action": {
                  "label": "Add to Cart",
                  "type": "uri",
                  "uri": "https://linecorp.com",
                },
                "backgroundColor": undefined,
                "color": "#aaaaaa",
                "flex": undefined,
                "gravity": undefined,
                "height": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "style": "primary",
                "type": "button",
              },
              {
                "action": {
                  "label": "Add to wishlist",
                  "type": "uri",
                  "uri": "https://linecorp.com",
                },
                "backgroundColor": undefined,
                "color": undefined,
                "flex": undefined,
                "gravity": undefined,
                "height": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "style": undefined,
                "type": "button",
              },
            ],
            "cornerRadius": undefined,
            "flex": undefined,
            "height": undefined,
            "layout": "vertical",
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "paddingAll": undefined,
            "paddingBottom": undefined,
            "paddingEnd": undefined,
            "paddingStart": undefined,
            "paddingTop": undefined,
            "position": undefined,
            "spacing": "sm",
            "type": "box",
            "width": undefined,
          },
          "hero": {
            "action": undefined,
            "align": undefined,
            "aspectMode": "cover",
            "aspectRatio": "20:13",
            "backgroundColor": undefined,
            "flex": undefined,
            "gravity": undefined,
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "position": undefined,
            "size": "xs",
            "type": "image",
            "url": "https://scdn.line-apps.com/n/channel_devcenter/img/fx/01_6_carousel.png",
          },
          "styles": undefined,
          "type": "bubble",
        },
        {
          "action": undefined,
          "body": {
            "action": undefined,
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderWidth": undefined,
            "contents": [
              {
                "action": {
                  "label": "See more",
                  "type": "uri",
                  "uri": "https://linecorp.com",
                },
                "backgroundColor": undefined,
                "color": undefined,
                "flex": 1,
                "gravity": "center",
                "height": undefined,
                "margin": undefined,
                "offsetBottom": undefined,
                "offsetEnd": undefined,
                "offsetStart": undefined,
                "offsetTop": undefined,
                "position": undefined,
                "style": undefined,
                "type": "button",
              },
            ],
            "cornerRadius": undefined,
            "flex": undefined,
            "height": undefined,
            "layout": "vertical",
            "margin": undefined,
            "offsetBottom": undefined,
            "offsetEnd": undefined,
            "offsetStart": undefined,
            "offsetTop": undefined,
            "paddingAll": undefined,
            "paddingBottom": undefined,
            "paddingEnd": undefined,
            "paddingStart": undefined,
            "paddingTop": undefined,
            "position": undefined,
            "spacing": "sm",
            "type": "box",
            "width": undefined,
          },
          "direction": "ltr",
          "styles": undefined,
          "type": "bubble",
        },
      ],
      "type": "carousel",
    },
    "type": "flex",
  },
  "type": "message",
}
`;
